# qSIP

./: CMakeLists.txt
baresip/include/: baresip.h
qSIP/: PhoneThread.cpp  PhoneThread.h  PhoneWidget.cpp  SettingAudioDeviceForm.cpp  misc.cpp
re/include/: re_types.h
